=== HEAD

* Add association_join to model datasets, for setting up joins based on associations (jeremyevans)

* Add one_through_many association to many_through_many plugin, for only returning a single record (jeremyevans)

* Add :graph_order association option, useful when :order needs to contain qualified identifiers (jeremyevans)

* Add one_through_one association, similar to many_to_many but only returning a single record (jeremyevans)

=== 4.7.0 (2014-02-01)

* Don't swallow underlying exception if there is an exception closing the cursor on PostgreSQL (jeremyevans) (#761)

* Recognize primary key unique constraint violations on MSSQL and SQLAnywhere (jeremyevans)

* Recognize composite unique constraint violations on SQLite (timcraft) (#758)

* Make #* method without arguments on SQL::Function return a Function with * prepended to the arguments (jeremyevans)

* Add #function to SQL::Identifier and SQL::QualifiedIdentifier, allowing for easy use of schema qualified functions or functions names that need quoting (jeremyevans)

* Add SQL::Function#distinct for easier creation of aggregate functions using DISTINCT (jeremyevans)

* Add SQL::Function#over for easier creation of window functions (jeremyevans)

* Don't clear validation instance_hooks until after a successful save (jeremyevans)

* Support :raise_on_save_failure option for one_to_many, pg_array_to_many, and many_to_pg_array associations (jeremyevans)

* Make SQLTime#to_s return a string in HH:MM:SS format, since it shouldn't include date information (jeremyevans)

* Support the Database#tables :schema option in the jdbc adapter (robbiegill, jeremyevans) (#755)

* Automatically rollback transactions in killed threads in ruby 2.0+ (chanks) (#752)

* Add update_or_create plugin, for updating an object if it exists, or creating such an object if it does not (jeremyevans)

* Make auto_validations uniqueness validations work correctly for STI subclasses (jeremyevans)
