@@ -1,5 +1,7 @@
 === HEAD
 
+* Respect offsets when eager graphing *_one associations (jeremyevans)
+
 * Add association_join to model datasets, for setting up joins based on associations (jeremyevans)
 
 * Add one_through_many association to many_through_many plugin, for only returning a single record (jeremyevans)
